--- a/src/content/docs/react/interviews/class-vs-functional-comp.mdx
+++ b/src/content/docs/react/interviews/class-vs-functional-comp.mdx
@@ -102,7 +102,7 @@ const FunctionalComponent = (props) => {
   }
   ```
 
-### Quick Interview Answer ->
+### 🧠 Quick Interview Answer ->
 
 - _Class component uses ES6 classes with `this.state` and lifecycle methods. Functional Component are plain functions which uses
   `useState` and `useEffect` hooks to manage states and lifecycle methods. Functional Component are simpler, cleaner and current
